Eliminated LinkedList. Fixed timer to remember whether started or not.